@@ -192,10 +192,6 @@ class TestDatabasesSync:
     )
     def test_database_from_client_default_keyspace_per_environment_sync(self) -> None:
         client_a = DataAPIClient(environment=Environment.PROD)
-        db_a_m = client_a.get_database(id="id", region="r", keyspace="M")
-        assert db_a_m.keyspace == "M"
-        db_a_n = client_a.get_database(id="id", region="r")
-        assert db_a_n.keyspace == DEFAULT_ASTRA_DB_KEYSPACE
         db_a_me = client_a.get_database(api_ep5643_prod, keyspace="M")
         assert db_a_me.keyspace == "M"
         db_a_ne = client_a.get_database(api_ep5643_prod)
