@@ -7,6 +7,9 @@ Removal of several deprecated modules/features from previous versions:
     - 'retrieved' (=> `consumed`) and 'collection' (=> `data_source`) for cursors
     - 'set_caller' method of `DataAPIClient`, `AstraDBAdmin`, `DataAPIDatabaseAdmin`, `AstraDBDatabaseAdmin`, `[Async]Database`, `[Async]Collection`
     - 'caller_name' and 'caller_version' parameters where `callers` is now expected
+    - 'id' and 'region' to DataAPIClient's 'get_database' (and async version). Use `api_endpoint` which is now the one positional parameter.
+    - The 'max_time_ms' parameter in DataAPIClient's 'get_database' method.
+    - Accordingly, the syntax `client[api_endpoint]` also does not accept a database ID anymore.
 Removal of unused imports from toplevel __init__.py (ids, constants, cursors)
 
 v. 1.5.2
